gitops/redlib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib
  namespace: apps

spec:
  type: ClusterIP
  selector:
    app: redlib

  ports:
    - name: http
      port: 80
      targetPort: 8080
